syntax = "proto3";
package api;
import "enum.proto";

// Market Data
message Item {
  int64                               id                               = 1;  
  double                              volume                           = 2;
  double                              price                            = 3;
};

message Orderbook {
  string                              product                          = 1;
  string                              venue                            = 2;
  string                              system_timestamp                 = 3;
  string                              venue_timestamp                  = 4;
  int64                               levels                           = 5;
  repeated Item                       asks                             = 6;
  repeated Item                       bids                             = 7;
};

message Trade {
  int64                               trade_id                          = 1;
  string                              venue_trade_id                    = 2;
  string                              product                           = 3;
  string                              venue                             = 4;
  string                              system_timestamp                  = 5;
  string                              venue_timestamp                   = 6;
  double                              price                             = 7;
  double                              volume                            = 8;
  string                              order_side                        = 9;
};

message TradeRequest { 
   string                              token                            = 1;  
   int64                               venue_id                         = 2;     
}

message TradeResponse { 
   Retcode                             retcode                           = 1;
   repeated Trade                      trades                            = 2; 
   string                              comment                           = 3;   
   string                              elapsed                           = 4;  
}

message Ticker {
  string                              product                           = 1;
  string                              venue                             = 2;
  int64                               timestamp                         = 3;
  double                              price                             = 4;
  Side                                order_side                        = 5;
  double                              best_bid                          = 6;
  double                              best_ask                          = 7;
};

message Candle {
  string                             venue                               = 1;
  string                             product                             = 2;
  int64                              granularity                         = 3;
  int64                              point                               = 4;
  double                             open                                = 5;
  double                             close                               = 6;
  double                             high                                = 7;
  double                             low                                 = 8;
  double                             volume                              = 9;
  double                             total                               = 10;
  int64                              total_trades                        = 11;
  int64                              buy_total                           = 12;
  int64                              sell_total                          = 13;   
};